--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -1,4 +1,3 @@
-
 #top {
     position: relative;
     background-color: #036fab;
@@ -12,6 +11,7 @@
     background-color: #c2dfef;
     padding: 5px;
     margin: 10px 0px 0px 0px;
+    height: 100px;
 }
 
 #left {
@@ -19,6 +19,7 @@
     background-color: #ece3a5;
     padding: 5px;
     width: 150px;
+    height: 400px;
 }
 
 #right {
@@ -26,6 +27,7 @@
     background-color: #ece3a5;
     padding: 5px;
     width: 150px;
+    height: 400px;
 }
 
 .center_content {
@@ -38,12 +40,14 @@
     background-color: #dddddd;
     padding: 5px;
     margin-left: 170px;
+    height: 400px;
 }
 
 .right_content {
     background-color: #dddddd;
     padding: 5px;
     margin: 0px 170px 0px 170px;
+    height: 400px;
 }
 
 #top a:link, #top a:visited {
