--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -1,6 +1,6 @@
 #top {
     position: relative;
-    background-color: #036fab;
+    background-color: #ece3a5;
     color: white;
     padding: 5px;
     margin: 0px 0px 10px 0px;
@@ -8,7 +8,7 @@
 
 #bottom {
     position: relative;
-    background-color: #c2dfef;
+    background-color: #ffffff;
     padding: 5px;
     margin: 10px 0px 0px 0px;
     height: 100px;
@@ -16,38 +16,38 @@
 
 #left {
     float: left;
-    background-color: #ece3a5;
+    background-color: #ffffff;
     padding: 5px;
-    width: 150px;
-    height: 400px;
+    width: 200px;
+    height: 800px;
 }
 
 #right {
     float: right;
-    background-color: #ece3a5;
+    background-color: #ffffff;
     padding: 5px;
     width: 150px;
-    height: 400px;
+    height: 800px;
 }
 
 .center_content {
     position: relative;
-    background-color: #dddddd;
+    background-color: #ffffff;
     padding: 5px;
 }
 
 .left_content {
-    background-color: #dddddd;
+    background-color: #ffffff;
     padding: 5px;
     margin-left: 170px;
-    height: 400px;
+    height: 800px;
 }
 
 .right_content {
-    background-color: #dddddd;
+    background-color: #ffffff;
     padding: 5px;
     margin: 0px 170px 0px 170px;
-    height: 400px;
+    height: 800px;
 }
 
 #top a:link, #top a:visited {
