--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -1,23 +1,23 @@
 #top {
     position: relative;
-    background-color: #ece3a5;
+    background-color: #ffffff;
     color: white;
-    padding: 5px;
-    margin: 0px 0px 10px 0px;
+    padding: 10px;
+    margin: 10px 10px 10px 10px;
 }
 
 #bottom {
     position: relative;
     background-color: #ffffff;
-    padding: 5px;
-    margin: 10px 0px 0px 0px;
+    padding: 10px;
+    margin: 10px 10px 10px 10px;
     height: 100px;
 }
 
 #left {
     float: left;
     background-color: #ffffff;
-    padding: 5px;
+    padding: 10px;
     width: 200px;
     height: 800px;
 }
@@ -25,7 +25,7 @@
 #right {
     float: right;
     background-color: #ffffff;
-    padding: 5px;
+    padding: 10px;
     width: 150px;
     height: 800px;
 }
@@ -33,20 +33,20 @@
 .center_content {
     position: relative;
     background-color: #ffffff;
-    padding: 5px;
+    padding: 10px;
 }
 
 .left_content {
     background-color: #ffffff;
-    padding: 5px;
-    margin-left: 170px;
+    padding: 10px;
+    margin-left: 150px;
     height: 800px;
 }
 
 .right_content {
     background-color: #ffffff;
-    padding: 5px;
-    margin: 0px 170px 0px 170px;
+    padding: 10px;
+    margin: 10px 210px 10px 210px;
     height: 800px;
 }
 
