not importing EntryEvents

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -33,25 +33,25 @@
                                     <p:menuitem value="Registrar" outcome="/personnel/supervisor/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/personnel/supervisor/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
 
                                 <p:submenu label="Gerente" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/personnel/manager/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/personnel/manager/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
 
                                 <p:submenu label="Setor" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/personnel/sector/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/personnel/sector/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
                                 
                                 <p:menuitem value="Importar" outcome="/personnel/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                             </p:submenu>
                             
                             <p:submenu label="Produção" expanded="false">
@@ -59,28 +59,28 @@
                                     <p:menuitem value="Registrar" outcome="/production/phase/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/production/phase/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
 
                                 <p:submenu label="Modelo" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/model/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/production/model/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
 
                                 <p:submenu label="Ordem de Produção" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/productionOrder/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/production/productionOrder/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
 
                                 <p:submenu label="Ordem de Produção de Fase" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/phaseProductionOrder/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/production/phaseProductionOrder/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
                             </p:submenu>
                             
@@ -89,7 +89,7 @@
                                     <p:menuitem value="Registrar" outcome="/events/casualty/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/events/casualty/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
                                 
                                 <p:submenu label="Atividades de Produção" expanded="false">
@@ -103,7 +103,7 @@
                                     <p:menuitem value="Registrar" outcome="/events/timeClock/register" 
                                                 icon="ui-icon-plus" />
                                     <p:menuitem value="Importar" outcome="/events/timeClock/import" 
-                                                icon="ui-icon-arrowthick-1-n" disabled="true" />
+                                                icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
                             </p:submenu>
                         </p:panelMenu>
