created search pages for events in a given period

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -99,6 +99,8 @@
                                 <p:submenu label="Atividades de Produção" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/events/entry/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/events/entry/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/events/entry/import" 
                                                 icon="ui-icon-arrowthick-1-n" disabled="true" />
                                 </p:submenu>
@@ -106,6 +108,8 @@
                                 <p:submenu label="Entrada/Saída de Ponto" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/events/timeClock/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/events/timeClock/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/events/timeClock/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
