created search pages for production and personnel

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -50,9 +50,14 @@
                                 <p:submenu label="Setor" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/personnel/sector/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/personnel/sector/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/personnel/sector/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
+                                
+                                <p:menuitem value="Consultar" outcome="/personnel/search" 
+                                                icon="ui-icon-search" />
                                 
                                 <p:menuitem value="Importar" outcome="/personnel/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
@@ -62,6 +67,8 @@
                                 <p:submenu label="Fase" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/phase/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/production/phase/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/production/phase/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
@@ -69,6 +76,8 @@
                                 <p:submenu label="Modelo" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/model/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/production/model/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/production/model/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
@@ -76,6 +85,8 @@
                                 <p:submenu label="Ordem de Produção" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/productionOrder/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/production/productionOrder/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/production/productionOrder/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
@@ -83,6 +94,8 @@
                                 <p:submenu label="Ordem de Produção de Fase" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/production/phaseProductionOrder/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/production/phaseProductionOrder/search" 
+                                                icon="ui-icon-search" disabled="true" />
                                     <p:menuitem value="Importar" outcome="/production/phaseProductionOrder/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
@@ -92,6 +105,8 @@
                                 <p:submenu label="Sinistro" expanded="false">
                                     <p:menuitem value="Registrar" outcome="/events/casualty/register" 
                                                 icon="ui-icon-plus" />
+                                    <p:menuitem value="Consultar" outcome="/events/casualty/search" 
+                                                icon="ui-icon-search" />
                                     <p:menuitem value="Importar" outcome="/events/casualty/import" 
                                                 icon="ui-icon-arrowthick-1-n" />
                                 </p:submenu>
