created report/attendance page

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -130,14 +130,14 @@
                                 </p:submenu>
                             </p:submenu>
                             
-                            <p:submenu label="Relatórios" expanded="false" rendered="false">
+                            <p:submenu label="Relatórios" expanded="false">
                                 <p:submenu label="Gráficos" expanded="false">
-                                    <p:menuitem value="Horário" outcome="/reports/charts/efficiency" 
+                                    <p:menuitem value="Horário" outcome="/reports/charts/attendance" 
                                                 icon="ui-icon-calendar" />
                                     <p:menuitem value="Eficiência" outcome="/reports/charts/efficiency" 
                                                 icon="ui-icon-search" disabled="true" />
                                 </p:submenu>
-                                <p:submenu label="Impressos" expanded="false">
+                                <p:submenu label="Impressos" expanded="false" rendered="false">
                                     <p:menuitem value="Eficiência" outcome="/reports/print/efficiency" 
                                                 icon="ui-icon-print" disabled="true" />
                                 </p:submenu>
