--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -135,7 +135,7 @@
                                     <p:menuitem value="Horário" outcome="/reports/charts/attendance" 
                                                 icon="ui-icon-calendar" />
                                     <p:menuitem value="Eficiência" outcome="/reports/charts/efficiency" 
-                                                icon="ui-icon-search" disabled="true" />
+                                                icon="ui-icon-search" />
                                 </p:submenu>
                                 <p:submenu label="Impressos" expanded="false" rendered="false">
                                     <p:menuitem value="Eficiência" outcome="/reports/print/efficiency" 
